# sei-ai-voice-agent-task

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-voice-agent.txt  requirements.txt  run_wise_faq_pipeline.py  setup_livekit_twilio.md  voice_agent_worker.py
backend/: __init__.py  config.py  guardrails.py  llm.py  main.py  retrieval.py  routes_phone.py  routes_voice.py  schemas.py
